Fix code for dark mode

--- a/_scss/abstracts/_mixins.scss
+++ b/_scss/abstracts/_mixins.scss
@@ -65,7 +65,7 @@
 
 	code.highlighter-rouge { // scss-lint:disable QualifyingElement
 		background-color: $bg-dark-code;
-		color: $fg-dark-body;
+		color: $fg-dark-code;
 	}
 
 	.badge {
