--- a/_scss/abstracts/_variables.scss
+++ b/_scss/abstracts/_variables.scss
@@ -31,7 +31,7 @@ $bg-avatar: #fff;
 $bg-dark-body: #232b32;
 $bg-dark-navbar: #1e1f26;
 $bg-dark-card: #152028;
-$bg-dark-code: #38383d;
+$bg-dark-code: #1d1f21;
 $bg-dark-form-input: #e9ecef;
 $bg-dark-badge: #375a7f;
 
@@ -44,6 +44,7 @@ $fg-donate: #dc3545;
 $fg-icon: #007bff;
 $fg-icon-hover: #0056b3;
 $fg-dark-body: #efefef;
+$fg-dark-code: #c5c8c6;
 
 // Border colors
 $br-avatar: #e6e6e6;
